# MinecraftModpackManager

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  setup.py
config/: config.json
data/: download_list.txt  structure.txt
data/mods/: mod_list.json
data/mods/download/: structure.txt
src/: ServerSync-master.code-workspace  config.py  main.py  utils.py
src/api/: __init__.py  api.py  base_api.py  curseforge_api.py  high_level_api.py  modrinth_api.py
src/api/format/: curseforge_format.json  modrinth_format.json
src/gui/: gui.py
src/gui/backend/: app.py  websockets.py
src/gui/vue/: .eslintrc-auto-import.json  .eslintrc.json  .gitignore  components.d.ts  index.html  package-lock.json  package.json  vite.config.js
src/gui/vue/src/: App.vue  main.js  utility.js
src/gui/vue/static/: eelconfig.js
src/gui/vue_nuxt_test/: app.vue  nuxt.config.ts
src/gui/vue_nuxt_test/components/: ProjectCard.vue
src/gui/vue_nuxt_test/pages/: about.vue
src/gui/vue_nuxt_test/public/: eel.js
src/gui/web/: eel.js  index.html
src/gui/web/assets/: index-0d8b321f.css  index-13c482df.css  (+2 more)
src/gui/webpage/: eel.js  index.html
src/gui/webview _deprecated_/: gui_pySimpleGUI.py  gui_webview.py
src/manager/: api_manager.py  application_manager.py  data_manager.py  database_manager.py  download_manager.py  file_manager.py  project_manager.py
src/models/: constants.py  formats.py  mod.py  mod_info.py  mod_storage.py
src/types/: constants.py  formats.py
test/: api_test.py  decorator_test.ipynb  scorer_test.ipynb  test.ipynb  workflow.md
(+99 files in other folders)
