[build-system]
requires = ["setuptools>=42", "wheel"]

[project]
name = "MinecraftModpackManager"
version = "0.1.0"
authors = [
    {name="DevilsThumb", email="MrDevilsThumb@gmail.com"}
]
description = "A Python CLI and GUI for downloading and managing mods from CurseForge and Modrinth into subfolders for modpack creation"
readme = "README.md"
license = {text = "GNU GPLv3"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
dependencies = [
    "requests>=2.25.1"
]

[project.urls]
Homepage = "https://github.com/LukasMandok/MinecraftModpackManager"


[project.scripts]
minecraft-mod-manager = "source.main:main"
